# libcyphal

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .sonarcloud.properties  .travis.yaml  .travis.yml  CMakeCommon.cmake  CMakeLists.txt  CMakeLists.txt.in  CONTRIBUTING.md  Config  ContainerBuild.env  LICENSE  PRIMEAIR_README.md  README.md  Vagrantfile  _build_ci_guide.html  _l_v_s_guide.html  _lib_dev_guide.html  _media_dev_guide.html  _socket_c_a_n_interface_8hpp.html  _socket_c_a_n_interface_8hpp__dep__incl.map  _socket_c_a_n_interface_8hpp__dep__incl.md5  _socket_c_a_n_interface_8hpp__incl.map  _socket_c_a_n_interface_8hpp__incl.md5  _socket_c_a_n_interface_8hpp_source.html  _socket_c_a_n_interface_group_8hpp.html  _socket_c_a_n_interface_group_8hpp__dep__incl.map  _socket_c_a_n_interface_group_8hpp__dep__incl.md5  _socket_c_a_n_interface_group_8hpp__incl.map  _socket_c_a_n_interface_group_8hpp__incl.md5  _socket_c_a_n_interface_group_8hpp_source.html  _socket_c_a_n_interface_manager_8hpp.html  _socket_c_a_n_interface_manager_8hpp__dep__incl.map  _socket_c_a_n_interface_manager_8hpp__dep__incl.md5  _socket_c_a_n_interface_manager_8hpp__incl.map  _socket_c_a_n_interface_manager_8hpp__incl.md5  _socket_c_a_n_interface_manager_8hpp_source.html  _transport_guide.html  (+301 more)
demonstration/linux/: CMakeLists.txt  README.md
demonstration/linux/src/: example_node_42.cpp  example_node_43.cpp  main.cpp  storage_can.cpp  storage_udp.cpp
demonstration/posix/: CMakeLists.txt
demonstration/posix/src/: context.cpp  main.cpp  pollers.cpp  sockets.cpp
docker/coveralls/: info_to_coveralls  setup.cfg  setup.py
docs/: CMakeLists.txt  doxygen-flat-style.css  doxygen.ini  footer.html  stylesheet.css
docs/design/: readme.md  unique_any_poc.cpp
docs/examples/: CMakeLists.txt  example_01_hello_world.cpp  example_02_posix_udp_transport.cpp  example_02_transport_svc.cpp  example_02_udp_transport.cpp  example_03_can_transport.cpp  example_03_linux_socketcan_transport.cpp  example_12_posix_udp_presentation.cpp
docs/examples/0_transport/: example_02_posix_udp.cpp  example_03_linux_socketcan.cpp  example_0_transport_1_heartbeat_getinfo_udp.cpp  example_0_transport_2_heartbeat_getinfo_can.cpp  example_0_transport_2_heartbeat_getinfo_linux_can.cpp
docs/examples/1_presentation/: example_10_posix_udp.cpp  example_12_posix_udp.cpp  example_1_presentation_0_hello_pubsub_udp.cpp  example_1_presentation_0_hello_raw_pubsub_udp.cpp  example_1_presentation_1_heartbeat_getinfo_udp.cpp  example_1_presentation_1_ping_user_service_udp.cpp  example_1_presentation_2_heartbeat_getinfo_udp.cpp  example_1_presentation_3_hb_getinfo_ping_linux_can.cpp
docs/examples/2_application/: example_2_application_0_node_hb_getinfo_udp.cpp
docs/examples/platform/: common_helpers.hpp  node_helpers.hpp  storage.hpp  tracking_memory_resource.hpp
libuavcan_drivers/posix/: CMakeLists.txt
libuavcan_drivers/posix/test/: mock_systemclock.hpp  test_socketcan_iface.cpp
libuavcan_utils/: CMakeLists.txt
libuavcan_utils/linux/apps/: test_clock.cpp  test_dynamic_node_id_client.cpp  test_file_server.cpp  test_multithreading.cpp  test_posix.cpp  test_socket.cpp  test_system_utils.cpp  test_time_sync.cpp  uavcan_dynamic_node_id_server.cpp  uavcan_monitor.cpp
libuavcan_utils/posix/apps/: test_node.cpp  uavcan_nodetool.cpp
submodule/cetl/cetlvast/: .gitattributes  CMakeLists.txt  README.md  verify.py
submodule/o1heap/tests/: .clang-tidy  CMakeLists.txt  cfg_test_internal.h  internal.hpp  main.cpp  test_general.cpp  test_private.cpp
test/: CMakeLists.txt
test/ci/: linux-build.sh  native-clang-build-and-test.sh  native-gcc-build-and-test-exceptions.sh  native-gcc-build-and-test.sh  ontarget-s32k-build.sh  ontarget-s32k-test.sh  postbuild-upload-coverage.sh  postbuild-upload-docs.sh  postbuild-upload-reports.sh  verify.py
test/cmake/: common.cmake
test/cmake/compiler_flag_sets/: _native_common.cmake  cortex-m4-fpv4-sp-d16-nosys.cmake  native-full.cmake  native.cmake  native_common.cmake  native_unittest.cmake  native_unittest_w_exceptions.cmake
test/cmake/modules/: Findclangformat.cmake  Findgenhtml.cmake  Findgtest.cmake  Findlcov.cmake  Findlibcyphal_docs.cmake  Findlibuavcan_docs.cmake  Findnnvg.cmake  Findpublic_regulated_data_types.cmake  Findsonar-scanner.cmake  Findsonarqube.cmake  Findvirtualenv.cmake  Gtest.txt.in  clang-format-check.py  public_regulated_data_types.txt.in
test/cmake/toolchains/: clang-native.cmake  gcc-arm-none-eabi.cmake  gcc-native.cmake
test/compile/: compile_tests.cmake  test_buildconfig_001.cpp  test_buildconfig_002.cpp  test_media_can_001.cpp  test_media_interfaces_001.cpp  test_media_interfaces_002.cpp  test_time_001.cpp  test_time_002.cpp  test_time_003.cpp  test_time_004.cpp  test_time_005.cpp  test_time_006.cpp  test_transport_media_can_001.cpp
test/linux/: tests.cmake
test/native/: test_build_config.cpp  test_bus.cpp  test_math_saturation.cpp  test_media_can.cpp  test_platform_memory_copy_bits.cpp  test_platform_memory_poolallocator.cpp  test_platform_memory_poolallocator_unordered_map.cpp  test_platform_memory_poolallocator_vector.cpp  test_result.cpp  test_time.cpp  test_time_duration.cpp  test_time_duration_and_time.cpp  test_time_time.cpp  test_transport_bus_can.cpp  test_transport_media_can.cpp  test_types_time_duration.cpp  test_types_time_duration_and_time.cpp  test_types_time_time.cpp  test_util_math.cpp  tests.cmake  unit_tests.cmake
test/ontarget/: loadfile_swd.jlink  unit_tests.cmake
test/ontarget/CMSIS/: README.md
test/ontarget/S32K146EVB/: COPYING.BSD-3.txt  unit_tests.cmake
test/ontarget/S32K148EVB/: tests.cmake  unit_tests.cmake
test/unittest/: CMakeLists.txt  cetl_gtest_helpers.hpp  custom_libcyphal_config.hpp  executor_mock.hpp  gtest_helpers.hpp  memory_resource_mock.hpp  sonar.cpp  test_hello_libcyphal.cpp  test_libcyphal.cpp  test_scheduler.hpp  test_transport_ip_v4_address.cpp  test_types.cpp  test_utilities.hpp  tracking_memory_resource.hpp  unique_ptr_reference_wrapper.hpp  verification_utilities.hpp  virtual_time_scheduler.hpp
(+715 files in other folders)
