[metadata]
name = info-to-coveralls
author = UAVCAN Development Team
author_email = dixonsco@amazon.com
url = https://uavcan.org
description = Upload lcov info data to coveralls.io
license = MIT
license_file = ../LICENSE
keywords = uavcan, c++, coverage, 

[options]
packages=find:
scripts = 
    info_to_coveralls
install_requires=
    requests
zip_safe = False

[mypy]
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_context = True
mypy_path = src

[flake8]
max-complexity = 10
max-line-length = 160
doctests = True
statistics = True
show-source = True

[doc8]
max-line-length=100
